Fixed a bunch of calls to deprecated methods (mostly primitive wrapper class constructor calls).
git-svn-id: https://citdcbmipav.cit.nih.gov/repos-pub/mipav@15688 ba61647d-9d00-f842-95cd-605cb4296b96