@@ -219,7 +219,7 @@ public class JDialogCenterOfMassRGB extends JDialogScriptableBase implements Alg
         }
          * String text = field.getText(); String tempStr;
          *
-         * Double stringConv = new Double(0);
+         * Double stringConv = Double.valueOf(0);
          *
          * field.removeFocusListener(this);
          *
